--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,20 @@
 }
 
 .Title {
-  font-family: "Style Script", cursive;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
   font-size: 3rem;
+}
+
+.TodoList__AddItem {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.TodoList__TextField {
+  width: 100%;
+  margin-right: 8px;
 }
 
 .TodoListItem {
